--- a/app/src/package.json
+++ b/app/src/package.json
@@ -9,7 +9,7 @@
   "author": "Amulya Reddy",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.2",
+    // "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
