--- a/app/src/package.json
+++ b/app/src/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "quickstart-docker-express-example",
+  "name": "src",
   "version": "1.0.0",
-  "description": "Demo to show git push build and deploy",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Amulya Reddy",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
-    "express": "^4.14.0",
-    "nodemon": "^1.11.0"
+    "express": "^4.15.3",
+    "express-session": "^1.15.3",
+    "mongoose": "^4.10.8",
+    "morgan": "^1.8.2",
+    "nodemailer": "^4.0.1",
+    "nodemon": "^1.11.0",
+    "pg": "^6.4.0",
+    "sequelize": "^4.2.0"
   }
 }
