--- a/app/src/package.json
+++ b/app/src/package.json
@@ -19,6 +19,7 @@
     "nodemailer": "^4.0.1",
     "nodemon": "^1.11.0",
     "pg": "^6.4.0",
-    "sequelize": "^4.2.0"
+    "sequelize": "^4.2.0",
+    "lodash": ">=4.17.11"
   }
 }
